DS-1321 by bogdan-hepting: Fix bug on mobile view

--- a/themes/socialbase/components/asset-builds/css/materialize.css
+++ b/themes/socialbase/components/asset-builds/css/materialize.css
@@ -3302,7 +3302,7 @@ a.card:hover {
   width: 100%;
 }
 
-.card--teaser .card-image > img, .card--teaser .card-image .status {
+.card--teaser .card-image > img, .card--teaser .card-image > a, .card--teaser .card-image .status {
   display: none;
 }
 
