--- a/themes/socialbase/components/materialize/_cards.scss
+++ b/themes/socialbase/components/materialize/_cards.scss
@@ -140,7 +140,7 @@ a.card:hover {
 
   .card-image {
     width: 100%;
-    > img, .status {
+    > img, > a, .status {
       display: none;
     }
 
